css: Fix extraneous spacing in bullet lists
We add spacing around paragraphs, but Asciidoc puts the contents of
every bullet point inside a `<p>` tag. Bullet-point lists look a lot
more natural with this fix applied.

--- a/mint.css
+++ b/mint.css
@@ -15,6 +15,10 @@ p {
   padding-bottom: 0.5em;
 }
 
+li > p {
+  padding-top: 0;
+  padding-bottom: 0;
+}
 /* some basics: a colour and font settings */
 body {
   background-color: #c6dcd1;
